Compute sticky position constraints without considering transforms.

Sticky position is a layout offset and should not be affected by transforms.

BUG=648683
TEST=LayoutBoxModelObjectTest.StickyPositionTransforms

Review-Url: https://codereview.chromium.org/2346383005
Cr-Commit-Position: refs/heads/master@{#419954}

Former-commit-id: 3e7e8fe5f7ca924f2dffe5a251f48038e85f8e91